# enman

./: .enman-version  .enmanrc  CONFIGURATION.md  Cargo.toml  GUI_INSTALLER_NOTE.md  INSTALL.md  LICENSE-MIT  PUBLISHING.md  README.md  install.ps1  install.sh  reset_mysql_password.bat  setup.iss  temp_test.rs  test_toml.rs  toml_test.rs
.cargo/: config.toml
examples/: enman-config-example.toml  full-project-example.toml
scripts/: build-release.ps1  build-release.sh  mysql_init.ps1  setup-em-alias.bat  setup-em-alias.ps1
src/: Cargo.toml  download.rs  em.rs  localization.rs  main.rs  platform.rs  tool.rs
src/cli/: config.rs  global.rs  init.rs  install.rs  list.rs  mod.rs  uninstall.rs  use_cmd.rs
src/core/: mod.rs  paths.rs  version.rs
src/downloader/: java.rs  mariadb.rs  mod.rs  mysql.rs  node.rs  python.rs  redis.rs
test-project/: .enmanrc
