[package]
name = "enman"
version = "0.1.0"
edition = "2021"
description = "Unified environment manager for dev tools (Node.js, Python, Ruby, databases, CLI tools)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zhy2635/enman"
readme = "README.md"
keywords = ["toolchain", "version-manager", "dev-tools"]
categories = ["development-tools"]

[[bin]]
name = "enman"
path = "src/main.rs"

[[bin]]
name = "em"
path = "src/em.rs"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
dirs = "5.0"
anyhow = "1.0"
zip = "0.6"
tar = "0.4"
xz2 = "0.1"
flate2 = "1.0"
indicatif = { version = "0.17", features = ["tokio"] }
tempfile = "3.10"
futures-util = "0.3"
rpassword = "7.2"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
semver = "1.0"
chrono = { version = "0.4", features = ["serde"] }  # 添加chrono依赖

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["stringapiset", "winnls"] }

[dev-dependencies]
tokio-test = "0.4"

[patch.crates-io]
# 仅在需要时取消注释以修复特定依赖项
# zip = { git = "https://github.com/zip-rs/zip.git" }